add navbar & footer in thx page

--- a/css/style.css
+++ b/css/style.css
@@ -450,6 +450,12 @@ textarea.form-control {
   }
 
   /* end features section */
+
+  /* footer */
+  .footer p {
+    font-size: small;
+  }
+  /* end footer */
 }
 
 /* Tablet */
